# Minibee-Viewer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HELP.md  README.md  index.html  package-lock.json  package.json  start-minibee.bat
.github/: pull_request_template.md
.github/workflows/: codeql.yml  release.yml
bridge/: caps.php  run.php
css/: app.css
js/: errors.js  serve-guard.js  state.js  utils.js  version.json
js/protocol/: bridge.js  sl-binary.js  sl-login.js  sl-packet.js  sl-search.js  sl-slurl.js
js/ui/: buddies.js  chat.js  destinations.js  im.js  map.js  radar.js  search.js  teleport.js
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  diaglog.rs  lib.rs  main.rs  urlmatch.rs
src-tauri/src/bridge/: caps.rs  circuit.rs  eventqueue.rs  hwid.rs  login.rs  map.rs  mod.rs  proxy.rs  session.rs  state.rs  util.rs
src-tauri/src/codec/: llsd.rs  mod.rs  template.rs
src/_scripts/: check_all_js.py  check_js_syntax.py
src/bridge/: daemon.php  poll.php
src/css/: app.css
src/js/: app.js  diaglog.js  errors.js  serve-guard.js  settings.js  state.js  utils.js  version.js  version.json
src/js/audio/: parcel-music.js
test/: binary.test.mjs  profiles.test.mjs  slurl.test.mjs  utils.test.mjs
viewer/: index.html  start-minibee.bat
viewer/_scripts/: audit_packets.py
viewer/_todo/: to-do.md
viewer/bridge/: caps.php  daemon.php  poll.php  run.php
viewer/css/: app.css
viewer/js/: app.js  state.js  version.json
(+59 files in other folders)
