[package]
name = "minibee-viewer"
# Keep in sync with tauri.conf.json "version" (the single source of truth).
version = "0.6.3"
description = "Minibee Viewer"
authors = ["PanteraPolnocy"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "minibee_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "time", "sync", "macros", "rt-multi-thread", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
base64 = "0.22"
md-5 = "0.10"
quick-xml = "0.36"
roxmltree = "0.20"
regex = "1"
urlencoding = "2"
futures = "0.3"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

